<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1087</width>
    <height>844</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <property name="styleSheet">
    <string notr="true">*{
font-family: Times New Roman;
font-size: 30 px;
}

.QLineEdit{
border: 1px solid white;
background: transparent;
color: #333;
border: none;
border-bottom: 1px solid rgb(155, 150, 240);

border-radius: 50px;
padding-bottom:-50px;
}

.QPushButton{font-size: 40px;
color: rgb(8, 207, 200);
background-color: black;
border-radius: 30px 35px;

}
.QPushButton:hover{
color: black;
background-color:qlineargradient(spread:repeat, x1:1, y1:1, x2:0.005, y2:0, stop:0 rgba(8, 207, 200, 255), stop:0.521127 rgba(166, 255, 248, 255), stop:0.784038 rgba(5, 112, 147, 255));
}
.QLabel{
color:rgb(246, 58, 146);
}


</string>
   </property>
   <widget class="QTabWidget" name="tabWidget">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>1091</width>
      <height>881</height>
     </rect>
    </property>
    <property name="minimumSize">
     <size>
      <width>1091</width>
      <height>0</height>
     </size>
    </property>
    <property name="maximumSize">
     <size>
      <width>1091</width>
      <height>16777215</height>
     </size>
    </property>
    <property name="styleSheet">
     <string notr="true">background: qlineargradient(spread:pad, x1:1, y1:1, x2:0.028169, y2:0.051, stop:0.0422535 rgba(246, 58, 146, 255), stop:0.295775 rgba(255, 191, 191, 255), stop:0.652582 rgba(255, 170, 255, 255), stop:1 rgba(153, 150, 240, 255))</string>
    </property>
    <property name="currentIndex">
     <number>0</number>
    </property>
    <widget class="QWidget" name="CustomerLogin">
     <property name="styleSheet">
      <string notr="true"/>
     </property>
     <attribute name="title">
      <string/>
     </attribute>
     <widget class="QFrame" name="frame_3">
      <property name="geometry">
       <rect>
        <x>120</x>
        <y>140</y>
        <width>871</width>
        <height>571</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: #FFF;
border-radius:  40px;</string>
      </property>
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
      </property>
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
      </property>
      <widget class="QLabel" name="label_7">
       <property name="geometry">
        <rect>
         <x>510</x>
         <y>60</y>
         <width>261</width>
         <height>51</height>
        </rect>
       </property>
       <property name="styleSheet">
        <string notr="true">font: 22pt &quot;Segoe UI&quot;;</string>
       </property>
       <property name="text">
        <string>Operator Login</string>
       </property>
      </widget>
      <widget class="QLineEdit" name="username">
       <property name="geometry">
        <rect>
         <x>480</x>
         <y>120</y>
         <width>291</width>
         <height>91</height>
        </rect>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
       </property>
       <property name="placeholderText">
        <string>Username</string>
       </property>
      </widget>
      <widget class="QLineEdit" name="password">
       <property name="geometry">
        <rect>
         <x>480</x>
         <y>230</y>
         <width>301</width>
         <height>81</height>
        </rect>
       </property>
       <property name="text">
        <string/>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
       </property>
       <property name="placeholderText">
        <string>Password</string>
       </property>
      </widget>
      <widget class="QPushButton" name="LoginButton">
       <property name="geometry">
        <rect>
         <x>550</x>
         <y>380</y>
         <width>141</width>
         <height>71</height>
        </rect>
       </property>
       <property name="autoFillBackground">
        <bool>false</bool>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton{font-size: 25px;
color: rgb(248, 89, 157);
border-radius: 30px 35px;
border:2px solid qlineargradient(spread:pad, x1:1, y1:1, x2:0.028169, y2:0.051, stop:0.0422535 rgb(248, 89, 157));

}
QPushButton:hover{
border:none;
color: #FFF;
background-color:rgb(253, 166, 182);
}</string>
       </property>
       <property name="text">
        <string>Login</string>
       </property>
      </widget>
      <widget class="QLabel" name="label">
       <property name="geometry">
        <rect>
         <x>30</x>
         <y>80</y>
         <width>391</width>
         <height>411</height>
        </rect>
       </property>
       <property name="text">
        <string/>
       </property>
       <property name="pixmap">
        <pixmap>../assets/icons/logo.png</pixmap>
       </property>
       <property name="scaledContents">
        <bool>true</bool>
       </property>
      </widget>
      <widget class="QLabel" name="message">
       <property name="geometry">
        <rect>
         <x>510</x>
         <y>320</y>
         <width>281</width>
         <height>51</height>
        </rect>
       </property>
       <property name="styleSheet">
        <string notr="true">color:#FF0000;
font: 12pt &quot;Segoe UI&quot;;</string>
       </property>
       <property name="text">
        <string/>
       </property>
      </widget>
     </widget>
     <widget class="QLabel" name="label_8">
      <property name="geometry">
       <rect>
        <x>470</x>
        <y>30</y>
        <width>151</width>
        <height>151</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">background: qlineargradient(spread:pad, x1:1, y1:1, x2:0.028169, y2:0.051, stop:0.0422535 rgba(246, 58, 146, 255), stop:0.295775 rgba(255, 191, 191, 255), stop:0.652582 rgba(255, 170, 255, 255), stop:1 rgba(153, 150, 240, 255));
border-radius: 75px;
border-style:solid;</string>
      </property>
      <property name="text">
       <string/>
      </property>
      <property name="pixmap">
       <pixmap>../assets/icons/LoginO.png</pixmap>
      </property>
      <property name="scaledContents">
       <bool>true</bool>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
      <property name="openExternalLinks">
       <bool>false</bool>
      </property>
     </widget>
    </widget>
    <widget class="QWidget" name="OperatorLogin">
     <attribute name="title">
      <string/>
     </attribute>
     <widget class="QFrame" name="frame_2">
      <property name="geometry">
       <rect>
        <x>270</x>
        <y>130</y>
        <width>561</width>
        <height>601</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: #FFF;
border-radius:  40px;</string>
      </property>
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
      </property>
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
      </property>
      <widget class="QPushButton" name="delivery">
       <property name="geometry">
        <rect>
         <x>130</x>
         <y>130</y>
         <width>311</width>
         <height>71</height>
        </rect>
       </property>
       <property name="autoFillBackground">
        <bool>false</bool>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton{font-size: 25px;
color: rgb(248, 89, 157);
border-radius: 30px 35px;
border:2px solid qlineargradient(spread:pad, x1:1, y1:1, x2:0.028169, y2:0.051, stop:0.0422535 rgb(248, 89, 157));

}
QPushButton:hover{
border:none;
color: #FFF;
background-color:rgb(253, 166, 182);
}</string>
       </property>
       <property name="text">
        <string>ADD DELIVERY BOY</string>
       </property>
      </widget>
      <widget class="QPushButton" name="report">
       <property name="geometry">
        <rect>
         <x>130</x>
         <y>310</y>
         <width>311</width>
         <height>71</height>
        </rect>
       </property>
       <property name="autoFillBackground">
        <bool>false</bool>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton{font-size: 25px;
color: rgb(248, 89, 157);
border-radius: 30px 35px;
border:2px solid qlineargradient(spread:pad, x1:1, y1:1, x2:0.028169, y2:0.051, stop:0.0422535 rgb(248, 89, 157));

}
QPushButton:hover{
border:none;
color: #FFF;
background-color:rgb(253, 166, 182);
}</string>
       </property>
       <property name="text">
        <string>REPORT</string>
       </property>
      </widget>
      <widget class="QPushButton" name="additem">
       <property name="geometry">
        <rect>
         <x>130</x>
         <y>220</y>
         <width>311</width>
         <height>71</height>
        </rect>
       </property>
       <property name="autoFillBackground">
        <bool>false</bool>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton{font-size: 25px;
color: rgb(248, 89, 157);
border-radius: 30px 35px;
border:2px solid qlineargradient(spread:pad, x1:1, y1:1, x2:0.028169, y2:0.051, stop:0.0422535 rgb(248, 89, 157));

}
QPushButton:hover{
border:none;
color: #FFF;
background-color:rgb(253, 166, 182);
}</string>
       </property>
       <property name="text">
        <string>ADD NEW ITEMS</string>
       </property>
      </widget>
      <widget class="QPushButton" name="logout">
       <property name="geometry">
        <rect>
         <x>130</x>
         <y>400</y>
         <width>311</width>
         <height>71</height>
        </rect>
       </property>
       <property name="autoFillBackground">
        <bool>false</bool>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton{font-size: 25px;
color: rgb(248, 89, 157);
border-radius: 30px 35px;
border:2px solid qlineargradient(spread:pad, x1:1, y1:1, x2:0.028169, y2:0.051, stop:0.0422535 rgb(248, 89, 157));

}
QPushButton:hover{
border:none;
color: #FFF;
background-color:rgb(253, 166, 182);
}</string>
       </property>
       <property name="text">
        <string>LOG OUT</string>
       </property>
      </widget>
     </widget>
     <widget class="QLabel" name="label_9">
      <property name="geometry">
       <rect>
        <x>220</x>
        <y>50</y>
        <width>151</width>
        <height>151</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">background: qlineargradient(spread:pad, x1:1, y1:1, x2:0.028169, y2:0.051, stop:0.0422535 rgba(246, 58, 146, 255), stop:0.295775 rgba(255, 191, 191, 255), stop:0.652582 rgba(255, 170, 255, 255), stop:1 rgba(153, 150, 240, 255));
border-radius: 75px;
border-style:solid;</string>
      </property>
      <property name="text">
       <string/>
      </property>
      <property name="pixmap">
       <pixmap>../assets/icons/LoginO.png</pixmap>
      </property>
      <property name="scaledContents">
       <bool>true</bool>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
      <property name="openExternalLinks">
       <bool>false</bool>
      </property>
     </widget>
    </widget>
   </widget>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
